fix: make clickability of colum heads visible with link color

--- a/app/assets/stylesheets/sortable.css.scss
+++ b/app/assets/stylesheets/sortable.css.scss
@@ -1,7 +1,7 @@
 /* -*- coding: utf-8 -*- */
 
 a.sortable, a.sortable:visited, a.sortable:active {
-  color:inherit;
+  color:#3481cd;
 }
 
 .sortable.sort-descending::after {
